# graphalgo

./: Cargo.toml  Trunk.toml  index.html
.github/workflows/: main.yml
src/: graph.rs  graphstyle.rs  main.rs
src/algs/: bfs.rs  dfs.rs  mod.rs
src/components/: app.rs  canvas.rs  input.rs  mod.rs
styles/: output.css
