[package]
name = "graphalgo"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"
leptos = { version = "0.4.6", features = ["csr", "nightly"] }
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "console",
    "CanvasRenderingContext2d",
    "Document",
    "Element",

    "HtmlCanvasElement",

    "Performance",
    "Window",
]
